# thesis

./: .gitignore  .gitmodules  README.md
CalciteIRTranslator/: CMakeLists.txt  calciteIRTranslator.cpp
tests/: CMakeLists.txt  group_by_query.ll  host.cpp
